# stringbit

./: .gitignore  CMakeLists.txt  README.txt  ground-energy-leading-order.ods
mathematica/: Alpha2ThetaJacobian.nb  four-chain-overlap.nb  misc-calculation.nb  noncommunitive.nb  numerical-data.nb  perturb.nb  sbgrassmann.m  sbmatrices.m  stringbitvertex.nb  temp.nb  three-chain-overlap.nb
matlab/: PlotInfo.m  approxEqual.m  batch.m  deltaHam.m  find_match.m  get_ground_state.m  get_ground_state2.m  get_largeN_ground_state.m  ground_energy_leading_term.m  ground_states.txt  ground_vanish_N.m  ground_vanish_N.txt  ground_vanish_N2.m  gvn_batch.m  ham.m  licols.m  lowest_energies.m  lowest_energies2.m  lowest_energies3.m  makelink.sh  metric.m  missing_states.m  missing_states2.m  multi_plot.m  multi_plot2.m  norm_matrix.m  norm_matrix_rank.m  norm_matrix_rank_all.m  norm_ranks.m  norm_raw_data.m  orthnomal.m  orthnormal.m  output_ground_states.m  output_ground_states2.m  output_vanishN.m  output_vanishN.txt  pham.m  physical_states.m  physical_states2.m  plot_all.m  (+19 more)
matlab/boson/: deltaHam10.m  deltaHam3.m  deltaHam4.m  deltaHam5.m  deltaHam6.m  deltaHam7.m  deltaHam8.m  deltaHam9.m  get_state.m  get_state2.m  groud_vanish_N  ground_states.txt  ground_states2.txt  ground_vanish_N.txt  h0Ham10.m  h0Ham3.m  h0Ham4.m  h0Ham5.m  h0Ham6.m  h0Ham7.m  h0Ham8.m  h0Ham9.m  ham.m  ham10.m  ham3.m  ham4.m  ham8.m  lowest_energies2.m  norm10.m  norm3.m  norm4.m  norm5.m  norm6.m  norm7.m  norm8.m  norm9.m  pham4.m  pham7.m  plot_states2.m  ranks.txt  (+11 more)
matlab/fermion/: deltaHam10.m  deltaHam3.m  deltaHam4.m  deltaHam5.m  deltaHam6.m  deltaHam7.m  deltaHam8.m  deltaHam9.m  get_state.m  get_state2.m  ground_states.txt  ground_states2.txt  ground_vanish_N.txt  h0Ham10.m  h0Ham3.m  h0Ham4.m  h0Ham5.m  h0Ham6.m  h0Ham7.m  h0Ham8.m  h0Ham9.m  ham10.m  ham3.m  ham4.m  ham6.m  ham7.m  ham8.m  ham9.m  norm10.m  (+24 more)
notes/: 1N expansion of ground energy-backup.lyx  1N expansion of ground energy.lyx  Large N energy eigenstates.lyx  deltaH.lyx  entangle.lyx  example5bit.lyx  intro.lyx  largeN-energy.lyx  ref.bib  s2case.lyx  stringbit vertex calculation.lyx  stringbit vertex.lyx
results/: Es=1xi=-0.2.txt  Es=1xi=-0.5.txt  Es=1xi=-1.txt  Es=1xi=0.2.txt  Es=1xi=0.5.txt  Es=1xi=0.txt  Es=1xi=1.txt  Es=1xi=2.txt  Es=2xi=-0.5.txt  Es=2xi=-1.txt  Es=2xi=0.5.txt  Es=2xi=0.9.txt  Es=2xi=0.txt  Es=2xi=1.1.txt  Es=2xi=1.18.txt  Es=2xi=1.2.txt  Es=2xi=1.22.txt  Es=2xi=1.5.txt  Es=2xi=1.txt  Es=2xi=2.txt  Es=3xi=0.txt  Es=4xi=0.txt  Exi=-1M=3.txt  Exi=-1M=4.txt  Exi=-1M=6.txt  Exi=0.71M=5.txt  Exi=0.725M=5.txt  Exi=0.72M=5.txt  Exi=0.73M=5.txt  Exi=0.74M=5.txt  Exi=0.75M=5.txt  Exi=0.83M=6.txt  Exi=0.84M=6.txt  Exi=0.855M=6.txt  Exi=0.85M=6.txt  Exi=0.86M=6.txt  Exi=0.87M=6.txt  Exi=0.89M=7.txt  Exi=0.91M=7.txt  Exi=0.92M=7.txt  (+710 more)
slides/: #hepseminar.lyx#  Stringbit-TASI2017.lyx  hepseminar.lyx  script
source/: BitUtility.cpp  BitUtility.h  CMakeLists.txt  Coefficient.cpp  Coefficient.h  Complex.cpp  Complex.h  EnergyCalculator.cpp  EnergyCalculator.h  HamOperator.cpp  HamOperator.h  Hamiltonian.cpp  Hamiltonian.h  MixState.cpp  MixState.h  MixedTrace.cpp  MixedTrace.h  NormCalculator.cpp  NormCalculator.h  Partition.cpp  Partition.h  Polynomial.cpp  Polynomial.h  PrintGround.cpp  ScriptGenerator.cpp  ScriptGenerator.h  SingleTrace.cpp  SingleTrace.h  StateCollection.cpp  StateCollection.h  StateGenerator.cpp  StateGenerator.h  StateId.cpp  StateId.h  StateType.h  StringBitMatrices.cpp  StringBitMatrices.h  TraceState.cpp  TraceState.h  main.cpp  (+1 more)
submission/: strbitvertices.lyx
update/: Vqpr.ggb  Wrpq.ggb  cover letter.lyx  ref.bib  strbitverticesv-prd.tex  strbitverticesv2.lyx  strbitverticesv2.tex
(+304 files in other folders)
